Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12732

json.json_no_table fails with valgrind in buildbot and outside

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.2(EOL)
    • 10.2.8
    • JSON, Tests, MTR
    • None

    Description

      http://buildbot.askmonty.org/buildbot/builders/work-amd64-valgrind/builds/10030/steps/test/logs/stdio

      json.json_no_table                       [ fail ]  Found warnings/errors in server log file!
              Test ended at 2017-05-08 20:44:44
      line
      ==27427== Thread 6:
      ==27427== Conditional jump or move depends on uninitialised value(s)
      ==27427==    at 0xB1A0B8: Item_func_json_object::val_str(String*) (item_jsonfunc.cc:1767)
      ==27427==    by 0x5F1EC3: Item::val_json(String*) (item.h:1112)
      ==27427==    by 0xB185C0: append_json_value(String*, Item*, String*) (item_jsonfunc.cc:1359)
      ==27427==    by 0xB1C756: Item_func_json_insert::val_str(String*) (item_jsonfunc.cc:2460)
      ==27427==    by 0x95734C: Item::send(Protocol*, String*) (item.cc:6883)
      ==27427==    by 0x5EDBBD: Protocol::send_result_set_row(List<Item>*) (protocol.cc:979)
      ==27427==    by 0x670213: select_send::send_data(List<Item>&) (sql_class.cc:2762)
      ==27427==    by 0x700AA0: JOIN::exec_inner() (sql_select.cc:3354)
      ==27427==    by 0x700505: JOIN::exec() (sql_select.cc:3273)
      ==27427==    by 0x7016AE: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3666)
      ==27427==    by 0x6F5EC7: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
      ==27427==    by 0x6C1694: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:6431)
      ==27427==    by 0x6B76D1: mysql_execute_command(THD*) (sql_parse.cc:3448)
      ==27427==    by 0x6C5067: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7874)
      ==27427==    by 0x6B313D: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1812)
      ==27427==    by 0x6B1AAD: do_command(THD*) (sql_parse.cc:1362)
      ==27427== Conditional jump or move depends on uninitialised value(s)
      ==27427==    at 0xB18A38: Item_func_json_array::val_str(String*) (item_jsonfunc.cc:1440)
      ==27427==    by 0x95734C: Item::send(Protocol*, String*) (item.cc:6883)
      ==27427==    by 0x5EDBBD: Protocol::send_result_set_row(List<Item>*) (protocol.cc:979)
      ==27427==    by 0x670213: select_send::send_data(List<Item>&) (sql_class.cc:2762)
      ==27427==    by 0x700AA0: JOIN::exec_inner() (sql_select.cc:3354)
      ==27427==    by 0x700505: JOIN::exec() (sql_select.cc:3273)
      ==27427==    by 0x7016AE: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3666)
      ==27427==    by 0x6F5EC7: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
      ==27427==    by 0x6C1694: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:6431)
      ==27427==    by 0x6B76D1: mysql_execute_command(THD*) (sql_parse.cc:3448)
      ==27427==    by 0x6C5067: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7874)
      ==27427==    by 0x6B313D: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1812)
      ==27427==    by 0x6B1AAD: do_command(THD*) (sql_parse.cc:1362)
      ==27427==    by 0x801D38: do_handle_one_connection(CONNECT*) (sql_connect.cc:1354)
      ==27427==    by 0x801AC5: handle_one_connection (sql_connect.cc:1260)
      ==27427==    by 0xB60FB7: pfs_spawn_thread (pfs.cc:1862)
      ==27427== Conditional jump or move depends on uninitialised value(s)
      ==27427==    at 0xB1A0B8: Item_func_json_object::val_str(String*) (item_jsonfunc.cc:1767)
      ==27427==    by 0x95734C: Item::send(Protocol*, String*) (item.cc:6883)
      ==27427==    by 0x5EDBBD: Protocol::send_result_set_row(List<Item>*) (protocol.cc:979)
      ==27427==    by 0x670213: select_send::send_data(List<Item>&) (sql_class.cc:2762)
      ==27427==    by 0x700AA0: JOIN::exec_inner() (sql_select.cc:3354)
      ==27427==    by 0x700505: JOIN::exec() (sql_select.cc:3273)
      ==27427==    by 0x7016AE: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3666)
      ==27427==    by 0x6F5EC7: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
      ==27427==    by 0x6C1694: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:6431)
      ==27427==    by 0x6B76D1: mysql_execute_command(THD*) (sql_parse.cc:3448)
      ==27427==    by 0x6C5067: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7874)
      ==27427==    by 0x6B313D: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1812)
      ==27427==    by 0x6B1AAD: do_command(THD*) (sql_parse.cc:1362)
      ==27427==    by 0x801D38: do_handle_one_connection(CONNECT*) (sql_connect.cc:1354)
      ==27427==    by 0x801AC5: handle_one_connection (sql_connect.cc:1260)
      ==27427==    by 0xB60FB7: pfs_spawn_thread (pfs.cc:1862)
      ==27427== Conditional jump or move depends on uninitialised value(s)
      ==27427==    at 0xB18A38: Item_func_json_array::val_str(String*) (item_jsonfunc.cc:1440)
      ==27427==    by 0xB18713: append_json_keyname(String*, Item*, String*) (item_jsonfunc.cc:1381)
      ==27427==    by 0xB19F7A: Item_func_json_object::val_str(String*) (item_jsonfunc.cc:1752)
      ==27427==    by 0x95734C: Item::send(Protocol*, String*) (item.cc:6883)
      ==27427==    by 0x5EDBBD: Protocol::send_result_set_row(List<Item>*) (protocol.cc:979)
      ==27427==    by 0x670213: select_send::send_data(List<Item>&) (sql_class.cc:2762)
      ==27427==    by 0x700AA0: JOIN::exec_inner() (sql_select.cc:3354)
      ==27427==    by 0x700505: JOIN::exec() (sql_select.cc:3273)
      ==27427==    by 0x7016AE: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3666)
      ==27427==    by 0x6F5EC7: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
      ==27427==    by 0x6C1694: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:6431)
      ==27427==    by 0x6B76D1: mysql_execute_command(THD*) (sql_parse.cc:3448)
      ==27427==    by 0x6C5067: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7874)
      ==27427==    by 0x6B313D: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1812)
      ==27427==    by 0x6B1AAD: do_command(THD*) (sql_parse.cc:1362)
      ==27427==    by 0x801D38: do_handle_one_connection(CONNECT*) (sql_connect.cc:1354)
      ==27427== Conditional jump or move depends on uninitialised value(s)
      ==27427==    at 0xB18A38: Item_func_json_array::val_str(String*) (item_jsonfunc.cc:1440)
      ==27427==    by 0x5F1EC3: Item::val_json(String*) (item.h:1112)
      ==27427==    by 0xB185C0: append_json_value(String*, Item*, String*) (item_jsonfunc.cc:1359)
      ==27427==    by 0xB19FAA: Item_func_json_object::val_str(String*) (item_jsonfunc.cc:1753)
      ==27427==    by 0x95734C: Item::send(Protocol*, String*) (item.cc:6883)
      ==27427==    by 0x5EDBBD: Protocol::send_result_set_row(List<Item>*) (protocol.cc:979)
      ==27427==    by 0x670213: select_send::send_data(List<Item>&) (sql_class.cc:2762)
      ==27427==    by 0x700AA0: JOIN::exec_inner() (sql_select.cc:3354)
      ==27427==    by 0x700505: JOIN::exec() (sql_select.cc:3273)
      ==27427==    by 0x7016AE: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3666)
      ==27427==    by 0x6F5EC7: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
      ==27427==    by 0x6C1694: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:6431)
      ==27427==    by 0x6B76D1: mysql_execute_command(THD*) (sql_parse.cc:3448)
      ==27427==    by 0x6C5067: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7874)
      ==27427==    by 0x6B313D: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1812)
      ==27427==    by 0x6B1AAD: do_command(THD*) (sql_parse.cc:1362)
      ==27427== Conditional jump or move depends on uninitialised value(s)
      ==27427==    at 0xB18A38: Item_func_json_array::val_str(String*) (item_jsonfunc.cc:1440)
      ==27427==    by 0xA201CF: Item_char_typecast::val_str(String*) (item_timefunc.cc:2457)
      ==27427==    by 0xB18713: append_json_keyname(String*, Item*, String*) (item_jsonfunc.cc:1381)
      ==27427==    by 0xB19F7A: Item_func_json_object::val_str(String*) (item_jsonfunc.cc:1752)
      ==27427==    by 0x95734C: Item::send(Protocol*, String*) (item.cc:6883)
      ==27427==    by 0x5EDBBD: Protocol::send_result_set_row(List<Item>*) (protocol.cc:979)
      ==27427==    by 0x670213: select_send::send_data(List<Item>&) (sql_class.cc:2762)
      ==27427==    by 0x700AA0: JOIN::exec_inner() (sql_select.cc:3354)
      ==27427==    by 0x700505: JOIN::exec() (sql_select.cc:3273)
      ==27427==    by 0x7016AE: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3666)
      ==27427==    by 0x6F5EC7: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
      ==27427==    by 0x6C1694: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:6431)
      ==27427==    by 0x6B76D1: mysql_execute_command(THD*) (sql_parse.cc:3448)
      ==27427==    by 0x6C5067: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7874)
      ==27427==    by 0x6B313D: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1812)
      ==27427==    by 0x6B1AAD: do_command(THD*) (sql_parse.cc:1362)
      ==27427== Conditional jump or move depends on uninitialised value(s)
      ==27427==    at 0xB1A0B8: Item_func_json_object::val_str(String*) (item_jsonfunc.cc:1767)
      ==27427==    by 0x5F1EC3: Item::val_json(String*) (item.h:1112)
      ==27427==    by 0xB1B7AF: Item_func_json_type::val_str(String*) (item_jsonfunc.cc:2193)
      ==27427==    by 0xB15B76: Item_func_json_quote::val_str(String*) (item_jsonfunc.cc:560)
      ==27427==    by 0x95734C: Item::send(Protocol*, String*) (item.cc:6883)
      ==27427==    by 0x5EDBBD: Protocol::send_result_set_row(List<Item>*) (protocol.cc:979)
      ==27427==    by 0x670213: select_send::send_data(List<Item>&) (sql_class.cc:2762)
      ==27427==    by 0x700AA0: JOIN::exec_inner() (sql_select.cc:3354)
      ==27427==    by 0x700505: JOIN::exec() (sql_select.cc:3273)
      ==27427==    by 0x7016AE: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3666)
      ==27427==    by 0x6F5EC7: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
      ==27427==    by 0x6C1694: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:6431)
      ==27427==    by 0x6B76D1: mysql_execute_command(THD*) (sql_parse.cc:3448)
      ==27427==    by 0x6C5067: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7874)
      ==27427==    by 0x6B313D: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1812)
      ==27427==    by 0x6B1AAD: do_command(THD*) (sql_parse.cc:1362)
      ==27427== Conditional jump or move depends on uninitialised value(s)
      ==27427==    at 0xB1A0B8: Item_func_json_object::val_str(String*) (item_jsonfunc.cc:1767)
      ==27427==    by 0x5F1EC3: Item::val_json(String*) (item.h:1112)
      ==27427==    by 0xB1B7AF: Item_func_json_type::val_str(String*) (item_jsonfunc.cc:2193)
      ==27427==    by 0x95734C: Item::send(Protocol*, String*) (item.cc:6883)
      ==27427==    by 0x5EDBBD: Protocol::send_result_set_row(List<Item>*) (protocol.cc:979)
      ==27427==    by 0x670213: select_send::send_data(List<Item>&) (sql_class.cc:2762)
      ==27427==    by 0x700AA0: JOIN::exec_inner() (sql_select.cc:3354)
      ==27427==    by 0x700505: JOIN::exec() (sql_select.cc:3273)
      ==27427==    by 0x7016AE: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3666)
      ==27427==    by 0x6F5EC7: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
      ==27427==    by 0x6C1694: execute_sqlcom_select(THD*, TABLE_LIST*) (sql_parse.cc:6431)
      ==27427==    by 0x6B76D1: mysql_execute_command(THD*) (sql_parse.cc:3448)
      ==27427==    by 0x6C5067: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7874)
      ==27427==    by 0x6B313D: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1812)
      ==27427==    by 0x6B1AAD: do_command(THD*) (sql_parse.cc:1362)
      ==27427==    by 0x801D38: do_handle_one_connection(CONNECT*) (sql_connect.cc:1354)
      ==27427== Conditional jump or move depends on uninitialised value(s)
      ==27427==    at 0xB1A0B8: Item_func_json_object::val_str(String*) (item_jsonfunc.cc:1767)
      ==27427==    by 0x5F1EC3: Item::val_json(String*) (item.h:1112)
      ==27427==    by 0xB1B7AF: Item_func_json_type::val_str(String*) (item_jsonfunc.cc:2193)
      ==27427==    by 0x95555A: Item::save_in_field(Field*, bool) (item.cc:6372)
      ==27427==    by 0x652599: fill_record(THD*, TABLE*, Field**, List<Item>&, bool, bool) (sql_base.cc:8158)
      ==27427==    by 0x79BA6E: select_union::send_data(List<Item>&) (sql_union.cc:69)
      ==27427==    by 0x700AA0: JOIN::exec_inner() (sql_select.cc:3354)
      ==27427==    by 0x700505: JOIN::exec() (sql_select.cc:3273)
      ==27427==    by 0x7016AE: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3666)
      ==27427==    by 0x68865E: mysql_derived_fill(THD*, LEX*, TABLE_LIST*) (sql_derived.cc:1081)
      ==27427==    by 0x6880A0: mysql_derived_optimize(THD*, LEX*, TABLE_LIST*) (sql_derived.cc:910)
      ==27427==    by 0x6868E7: mysql_handle_single_derived(LEX*, TABLE_LIST*, unsigned int) (sql_derived.cc:197)
      ==27427==    by 0x6F936D: JOIN::optimize_inner() (sql_select.cc:1337)
      ==27427==    by 0x6F85B0: JOIN::optimize() (sql_select.cc:1085)
      ==27427==    by 0x70161B: mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*) (sql_select.cc:3652)
      ==27427==    by 0x6F5EC7: handle_select(THD*, LEX*, select_result*, unsigned long) (sql_select.cc:373)
      ^ Found warnings in /data/bld/10.2-valgrind/mysql-test/var/log/mysqld.1.err
      

      Attachments

        Activity

          People

            holyfoot Alexey Botchkov
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5d
                0.5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.