MDEV-12732 json.json_no_table fails with valgrind in buildbot and outside.

The result_limit variable wasn't always initialized in
        Item_func_json_array::fix_length_and_dec().